# sms-reseacher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  docker-compose.yml  docker-compose_2.yml  pyproject.toml
agent-eval/: CHANGELOG.md  README.md  cosmic-ray-survivors.md  cosmic-ray.toml  pyproject.toml
agent-eval/src/agent_eval/: cli.py  models.py
agent-eval/src/agent_eval/commands/: compare.py  eval_all.py  evaluate.py  improve.py  report.py
agent-eval/src/agent_eval/evals/: __init__.py  domain_modeler_eval.py  expert_eval.py  extractor_eval.py  librarian_eval.py  protocol_reviewer_eval.py  quality_judge_eval.py  screener_eval.py  search_builder_eval.py  synthesiser_eval.py  validity_eval.py
agent-eval/src/agent_eval/judge/: litellm_judge.py
agent-eval/src/agent_eval/pipelines/: agent_generator_eval.py
agent-eval/tests/unit/: test_cli_help.py  test_commands.py  test_evals.py  test_judge.py  test_models.py
agents/: CHANGELOG.md  README.md  cosmic-ray-survivors.md  cosmic-ray.toml  pyproject.toml
agents/.hypothesis/constants/: 04216addb9b7419f  201846a48481d6bb  3af5ebaf485abdc1  4318d9918570a260  55796f8f43ddfca6  7d4db6cc04c77a8e  8a16f977f0903896  95b06e08b2c4b5bc  9fd9bbf5b95de1b4  c2516781594c1f5a  d937cdf4f24c1f94  da39a3ee5e6b4b0d  efd7eb4ad902f616  f164c5e091bce575  fb0a62bfd9dea20c
agents/.hypothesis/examples/04e6b3400353b141/: f391533bf1d85d06
agents/prompts/screener/candidates/: system_candidate_20260316T005302.md  system_candidate_20260316T013637.md  system_candidate_20260316T020252.md  system_candidate_20260316T020335.md  user_candidate_20260316T005302.md.j2  user_candidate_20260316T013637.md.j2  user_candidate_20260316T020252.md.j2  user_candidate_20260316T020335.md.j2
agents/src/agents/: __init__.py  agent_generator.py  narrative_synthesiser_agent.py
agents/src/agents/core/: __init__.py  config.py  llm_client.py  mcp_client.py  prompt_loader.py  provider_config.py
agents/src/agents/services/: __init__.py  domain_modeler.py  expert.py  extractor.py  librarian.py  protocol_reviewer.py  quality_judge.py  screener.py  search_builder.py  synthesiser.py  validity.py
agents/src/agents/templates/: tertiary_protocol_review.j2
agents/tests/metamorphic/: conftest.py  test_agent_generator.py  test_domain_modeler.py  test_expert.py  test_extractor.py  test_extractor_mr.py  test_librarian.py  test_protocol_reviewer_meta.py  test_quality_judge.py  test_screener.py  test_screener_mr.py  test_search_builder.py  test_synthesiser.py  test_synthesiser_mr.py  test_validity.py
agents/tests/unit/: test_expert.py  test_extractor.py  test_librarian.py  test_llm_client.py  test_prompt_loader.py  test_protocol_reviewer.py  test_quality_judge.py  test_screener.py  test_search_builder.py  test_system_message_override.py  test_validity.py
backend/: CHANGELOG.md  Dockerfile  README.md  cosmic-ray-survivors.md  cosmic-ray.toml  pyproject.toml
backend/src/backend/: __init__.py  main.py
backend/src/backend/core/: auth.py  config.py  database.py  encryption.py  logging.py  totp.py
backend/src/backend/jobs/: __init__.py  evidence_briefing_job.py  extraction_job.py  narrative_synthesis_job.py  protocol_review_job.py  quality_job.py  results_job.py  search_job.py  worker.py  (+3 more)
backend/tests/: test_inter_rater_service.py  test_quality_assessment_service.py  test_slr_phase_gate.py  test_slr_protocol_service.py  test_slr_report_service.py  test_statistics.py  test_synthesis_service.py  test_synthesis_strategies.py  test_tertiary_phase_gate.py  test_tertiary_report.py  test_tertiary_seed_import.py  test_visualization_slr.py
backend/tests/integration/: conftest.py  test_admin_router.py  test_audit_router.py  test_auth_router.py  test_auth_totp.py  test_criteria_router.py  test_database_selection.py  test_db_import.py  test_extractions_router.py  test_groups_router.py  test_jobs_router.py  test_me_password.py  test_me_preferences.py  test_me_totp.py  test_metrics_router.py  test_openapi_auth.py  test_paper_markdown.py  test_papers_decisions.py  test_papers_router.py  test_pico_router.py  test_quality_router.py  test_results_router.py  test_search_strings_router.py  test_searches_router.py  test_seeds_router.py  test_studies_router.py  test_validity_router.py
backend/tests/unit/: test_audit_service.py  test_auth.py  test_config_and_main.py  test_dedup.py  test_export.py  test_export_extras.py  test_extraction_job.py  test_health.py  test_password_service.py  test_phase_gate.py  test_protocol_service.py  test_quality_job.py  test_results_job.py  test_search_job.py  test_search_job_helpers.py  test_totp_service.py  test_validity_job.py  test_visualization.py  test_worker.py
db/: CHANGELOG.md  README.md  alembic.ini  cosmic-ray-survivors.md  cosmic-ray.toml  db-session.sqlite  pyproject.toml
db/alembic/: env.py  script.py.mako
db/alembic/versions/: 0001_initial_schema.py  0002_users_and_groups.py  0003_study_extensions.py  0004_pico_and_seeds.py  0005_criteria_and_search.py  0006_candidate_papers.py  0007_conflict_flag.py  0008_study_phase_timestamps.py  0009_extraction.py  0009_results.py  0010_audit_trail_and_updated_at.py  0011_study_validity_column.py  0012_models_and_agents.py  0013_remove_reviewer_agent_name.py  0014_database_search_and_retrieval.py  0015_slr_workflow.py  0016_rapid_review_workflow.py  0017_tertiary_studies_workflow.py  0018_research_protocol_definition.py  15e0ed881953_add_metadata_column_to_study.py  2f51665cbb6d_add_user_security_preference_columns.py
db/src/db/: __init__.py  base.py  models.py
db/tests/: test_models_study.py  test_models_users.py  test_protocol_models.py  test_slr_models.py
db/tests/integration/: test_migration_0012.py
db/tests/unit/: test_models.py
researcher-mcp/: CHANGELOG.md  Dockerfile  README.md  cosmic-ray-survivors.md  cosmic-ray.toml  pyproject.toml
researcher-mcp/src/researcher_mcp/: server.py
researcher-mcp/tests/unit/: test_cascade.py  test_retry.py  test_scihub_disabled.py  test_sources.py  test_tools.py
(+638 files in other folders)
