[project]
name = "sms-agent-eval"
version = "0.1.0"
description = "Agent evaluation CLI for SMS Researcher"
requires-python = ">=3.14"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "deepeval>=1.0",
    "litellm>=1.40",
    "jinja2>=3.1",
    "pydantic>=2",
    "pydantic-settings>=2",
    "agents",
]

[project.scripts]
agent-eval = "agent_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval"]

[tool.uv.sources]
agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio[trio]>=4",
    "cosmic-ray>=8.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "UP", "B", "C4"]
ignore = ["D203", "D213", "B008", "D101", "D104", "D105"]

[tool.ruff.lint.per-file-ignores]
"src/agent_eval/evals/*.py" = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/agent_eval --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/agent_eval"]

[tool.cosmic-ray]
module-path = "src/agent_eval"
timeout = 30.0
