[project]
name = "agents"
version = "0.1.0"
description = "AI research-task execution agents for SMS Researcher"
requires-python = ">=3.14"
dependencies = [
    "litellm>=1.40",
    "jinja2>=3.1",
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "anyio[trio]>=4",
    "cosmic-ray>=8.3",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "D", "UP", "B", "C4"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/agents --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/agents"]

[tool.cosmic-ray]
module-path = "src/agents"
timeout = 30.0
