[project]
name = "sms-backend"
version = "0.1.0"
description = "FastAPI API gateway for SMS Researcher"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2",
    "pydantic-settings>=2",
    "structlog>=24",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "litellm>=1.40",
    "httpx>=0.27",
    # Background jobs
    "arq>=0.26",
    "redis>=5.0",
    # Visualizations
    "matplotlib>=3.9",
    "networkx>=3.3",
    "plotly>=5.22",
    "kaleido>=0.2",
    # Paper deduplication
    "rapidfuzz>=3.9",
    "agents",
    "db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.uv.sources]
agents = { workspace = true }
db     = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio[trio]>=4",
    "cosmic-ray>=8.3",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "D", "UP", "B", "C4"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/backend --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/backend"]

[tool.cosmic-ray]
module-path = "src/backend"
timeout = 30.0
