[project]
name = "db"
version = "0.1.0"
description = "SQLAlchemy models and Alembic migrations for SMS Researcher"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "D", "UP", "B", "C4"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/db --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/db"]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
