[project]
name = "sms-researcher-mcp"
version = "0.1.0"
description = "FastMCP paper-search server for SMS Researcher"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[project.scripts]
researcher-mcp = "researcher_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researcher_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio[trio]>=4",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "D", "UP", "B", "C4"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/researcher_mcp --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/researcher_mcp"]

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
