[project]
name = "sms-researcher-mcp"
version = "0.1.0"
description = "FastMCP paper-search server for SMS Researcher"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "pydantic>=2",
    "pydantic-settings>=2",
    "beautifulsoup4>=4.12",
    # Feature 006: academic database integrations
    "pybliometrics>=4.4.0",
    "semanticscholar>=0.11.0",
    "scholarly>=1.7.11",
    "unpywall>=0.2.3",
    "springernature-api-client>=0.0.9",
    "markitdown[all]>=0.1.5",
    "scidownl>=1.0.2",
]

[project.scripts]
researcher-mcp = "researcher_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/researcher_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio[trio]>=4",
    "cosmic-ray>=8.3",
]

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "D", "UP", "B", "C4"]
ignore = ["D203", "D213", "B008", "D101", "D104", "D105"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/researcher_mcp --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/researcher_mcp"]

[tool.cosmic-ray]
module-path = "src/researcher_mcp"
timeout = 30.0
